[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Buttons/TROTTENET - Witerbutton Pr.png" type="Texture" id=1]
[ext_resource path="res://Assets/Buttons/TROTTENET - Soundbutton Pr.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/TROTTENET - Fertigbutton.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/TROTTENET - SliderUnder.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/TROTTENET - Menubutton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/TROTTENET - Menubutton Pr.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/TROTTENET - Witerbutton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/TROTTENET - Fertigbutton Pr.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/TROTTENET - SliderOver.png" type="Texture" id=9]
[ext_resource path="res://Scenes/OptionsMenu.gd" type="Script" id=10]
[ext_resource path="res://Assets/Buttons/TROTTENET - Fullscreenbutton.png" type="Texture" id=11]
[ext_resource path="res://Assets/Buttons/TROTTENET - Msuigbutton H.png" type="Texture" id=12]
[ext_resource path="res://Assets/Buttons/TROTTENET - Menubutton H.png" type="Texture" id=13]
[ext_resource path="res://Assets/Buttons/TROTTENET - Soundbutton H.png" type="Texture" id=14]
[ext_resource path="res://Assets/Buttons/TROTTENET - Witerbutton H.png" type="Texture" id=15]
[ext_resource path="res://Assets/Buttons/TROTTENET - Fullscreenbutton H.png" type="Texture" id=16]
[ext_resource path="res://Assets/Buttons/TROTTENET - Msuigbutton.png" type="Texture" id=17]
[ext_resource path="res://Assets/Buttons/TROTTENET - Fertigbutton H.png" type="Texture" id=18]
[ext_resource path="res://Assets/Buttons/TROTTENET - Checkbox.png" type="Texture" id=19]
[ext_resource path="res://Assets/Buttons/TROTTENET - Fullscreenbutton Pr.png" type="Texture" id=20]

[sub_resource type="InputEventAction" id=1]
action = "Esc"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 43, 2 )

[node name="Options" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -81.0
margin_right = 37.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Witer" type="TextureButton" parent="Buttons"]
margin_right = 74.0
margin_bottom = 23.0
focus_neighbour_bottom = NodePath("../Fullscreen")
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="TextureButton" parent="Buttons"]
margin_top = 27.0
margin_right = 74.0
margin_bottom = 50.0
focus_neighbour_top = NodePath("../Witer")
focus_neighbour_bottom = NodePath("../Sound/HSlider")
shortcut_in_tooltip = false
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 16 )

[node name="Checkbox" type="Sprite" parent="Buttons/Fullscreen"]
position = Vector2( 65, 10 )
texture = ExtResource( 19 )
hframes = 2
frame = 1

[node name="Sound" type="TextureButton" parent="Buttons"]
margin_top = 54.0
margin_right = 74.0
margin_bottom = 77.0
focus_neighbour_top = NodePath("../Fullscreen")
focus_neighbour_bottom = NodePath("../Menu")
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 14 )

[node name="SoundSlider" type="HSlider" parent="Buttons/Sound"]
margin_left = 22.3056
margin_top = 8.58056
margin_right = 65.3056
margin_bottom = 24.5806
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 3 )
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musig" type="TextureButton" parent="Buttons"]
margin_top = 81.0
margin_right = 74.0
margin_bottom = 104.0
focus_neighbour_top = NodePath("../Fullscreen")
focus_neighbour_bottom = NodePath("../Menu")
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 12 )

[node name="MusigSlider" type="HSlider" parent="Buttons/Musig"]
margin_left = 22.3056
margin_top = 8.58056
margin_right = 65.3056
margin_bottom = 24.5806
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 3 )
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="Buttons"]
margin_top = 108.0
margin_right = 74.0
margin_bottom = 131.0
focus_neighbour_top = NodePath("../Sound/HSlider")
focus_neighbour_bottom = NodePath("../Fertig")
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 13 )

[node name="Fertig" type="TextureButton" parent="Buttons"]
margin_top = 135.0
margin_right = 74.0
margin_bottom = 158.0
focus_neighbour_top = NodePath("../Menu")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Witer" to="." method="_on_Witer_pressed"]
[connection signal="pressed" from="Buttons/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="value_changed" from="Buttons/Sound/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Buttons/Musig/MusigSlider" to="." method="_on_MusigSlider_value_changed"]
[connection signal="pressed" from="Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Buttons/Fertig" to="." method="_on_Fertig_pressed"]
